--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Search</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
     <header>
@@ -12,8 +13,8 @@
     </header>
 
     <main>
-
-      <div id="form-search">
+      <div class="container">
+      <div id="form-search" class="col-12 col-md-3">
         <form>
             <label for="city-search">Search for a City:</label>
             <input type="text" id="city-search" placeholder="San Diego">
@@ -26,6 +27,7 @@
         <input type="submit" value="New York">
         <input type="submit" value="Chicago">
         <input type="submit" value="Vancouver">
+      </div>
       </div>
       
       <div id="current-weather">
@@ -58,6 +60,7 @@
 
     </main>
     
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./assets/js/script.js"></script>
 </body>
 </html>
