add name function and city weather function

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <label for="city">Search for a City:</label>
           <input id="city" type="text" class="w-100 form-control" autofocus class="form-input"/>
           <div class="mt-2">
-            <button class="btn btn-primary p-2 search-btn w-100" type="submit">Search!</button>
+            <button class="btn btn-primary p-2 search-btn w-100" type="submit">Search</button>
           </div>
         </form>
         <div class="border" id="past-search"></div>
