--- a/index.html
+++ b/index.html
@@ -27,19 +27,22 @@
         </div>
         <div class="col-12 col-md-9">
           <div class="row border searched-city" id="current-weather">
-            <div class="col-12">
-                <h2 id="current-city"></h2>
-                <div id="weather-container" class="list-group"></div>
+            <div class="card col-12">
+                <h2 class="card-header bg-dark text-light" id="current-city"></h2>
+                <img class="card-header"id="icon" src=""/>
+                <div class="card-body" id="todayBody"></div>
             </div>
           </div>
           <div class="row border">
-            <h2 class="col-12" id="forecast"></h2>
-              <div class="d-flex" id="five-day-forecast"></div>
+            <h2 class="col-12" id="forecast">5-Day Forecast</h2>
+              <div class="row d-flex" id="five-day"></div>
           </div>
         </div>
       </div>
     </main>
     
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./assets/js/script.js"></script>
 </body>
