--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Weather Search</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="./assets/css/style.css" rel="stylesheet">
 </head>
 <body>
     <header class="p-3 mb-2 bg-dark bg-gradient text-center text-white">
@@ -18,17 +19,17 @@
       <div class="col-12 col-md-3">
         <form class="p-2" id="search-form">
           <label for="city">Search for a City:</label>
-          <input id="city" type="text" class="w-100 form-control" autofocus class="form-input"/>
+          <input id="city" type="text" class="w-100 form-control" autofocus class="form-input" placeholder="New York City"/>
           <div class="mt-2">
             <button class="btn btn-primary p-2 search-btn w-100" type="submit">Search</button>
           </div>
         </form>
         <div class="border" id="past-search"></div>
-        </div>
+      </div>
         <div class="col-12 col-md-9">
-          <div class="row border searched-city" id="current-weather">
+          <div class="row border" id="currentWeather">
             <div class="card col-12">
-                <h2 class="card-header bg-dark text-light" id="current-city"></h2>
+                <h2 class="card-header" id="currentCity"></h2>
                 <img class="card-header"id="icon" src=""/>
                 <div class="card-body" id="todayBody"></div>
             </div>
@@ -41,7 +42,7 @@
       </div>
     </main>
     
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./assets/js/script.js"></script>
