create current weather elements and information

--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
       </div>
         <div class="col-12 col-md-9">
           <div class="row border" id="currentWeather">
-            <div class="card col-12">
+            <div class="card col-12 bg-dark text-white">
                 <h2 class="card-header" id="currentCity"></h2>
-                <img class="card-header"id="icon" src=""/>
                 <div class="card-body" id="todayBody"></div>
             </div>
           </div>
