add second fetch for five day forecast; successfully console.log data from second fetch to create information for daily cards

--- a/index.html
+++ b/index.html
@@ -28,14 +28,20 @@
       </div>
         <div class="col-12 col-md-9">
           <div class="row border" id="currentWeather">
-            <div class="card col-12 bg-dark text-white">
-                <h2 class="card-header" id="currentCity"></h2>
+            <div class="card col-12 bg-dark text-light">
+                <h2 class="card-header" id="currentCity">Search a city...</h2>
                 <div class="card-body" id="todayBody"></div>
             </div>
           </div>
           <div class="row border">
-            <h2 class="col-12" id="forecast">5-Day Forecast</h2>
-              <div class="row d-flex" id="five-day"></div>
+            <h2 class="col-12 bg-dark text-light" id="forecast">5-Day Forecast</h2>
+              <div class="row d-flex" id="five-day">
+                <div id="day1" class="bg-dark"></div>
+                <div id="day2" class="bg-dark"></div>
+                <div id="day3" class="bg-dark"></div>
+                <div id="day4" class="bg-dark"></div>
+                <div id="day5" class="bg-dark"></div>
+              </div>
           </div>
         </div>
       </div>
