--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
           <div class="row border">
             <h2 class="col-12 bg-dark text-light" id="forecast">5-Day Forecast</h2>
               <div class="row d-flex" id="five-day">
-                <div id="day1" class="bg-dark"></div>
-                <div id="day2" class="bg-dark"></div>
-                <div id="day3" class="bg-dark"></div>
-                <div id="day4" class="bg-dark"></div>
-                <div id="day5" class="bg-dark"></div>
+                <div id="day1" class="card bg-dark"></div>
+                <div id="day2" class="card bg-dark"></div>
+                <div id="day3" class="card bg-dark"></div>
+                <div id="day4" class="card bg-dark"></div>
+                <div id="day5" class="card bg-dark"></div>
               </div>
           </div>
         </div>
