--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="./assets/css/style.css" rel="stylesheet">
 </head>
-<body>
+<body class="bg-dark">
     <header class="p-3 mb-2 bg-dark bg-gradient text-center text-white">
         <h1>Weather Dashboard</h1>
     </header>
@@ -18,7 +18,7 @@
     <div class="row">
       <div class="col-12 col-md-3">
         <form class="p-2" id="search-form">
-          <label for="city">Search for a City:</label>
+          <label for="city" class="text-light">Search for a City:</label>
           <input id="city" type="text" class="w-100 form-control" autofocus class="form-input" placeholder="New York City"/>
           <div class="mt-2">
             <button class="btn btn-primary p-2 search-btn w-100" type="submit">Search</button>
@@ -35,12 +35,12 @@
           </div>
           <div class="row border">
             <h2 class="col-12 bg-dark text-light" id="forecast">5-Day Forecast</h2>
-              <div class="row d-flex" id="five-day">
-                <div id="day1" class="card bg-dark"></div>
-                <div id="day2" class="card bg-dark"></div>
-                <div id="day3" class="card bg-dark"></div>
-                <div id="day4" class="card bg-dark"></div>
-                <div id="day5" class="card bg-dark"></div>
+              <div class="row d-inline-flex" id="five-day">
+                <div id="day1" class="card bg-dark p-2 forecast"></div>
+                <div id="day2" class="card bg-dark p-2 forecast"></div>
+                <div id="day3" class="card bg-dark p-2 forecast"></div>
+                <div id="day4" class="card bg-dark p-2 forecast"></div>
+                <div id="day5" class="card bg-dark p-2 forecast"></div>
               </div>
           </div>
         </div>
